# claude-keyboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  package.json  record-demo.sh  test_permission.py
.github/workflows/: release.yml
docs/: index.html  windows-adaptation.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: claude-keyboard.py
src-tauri/src/: hook_installer.rs  ipc.rs  lib.rs  main.rs  permission.rs  socket_server.rs  tts.rs  voice.rs
